--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,7 @@
 
     <style name="Theme.WarrantyRoster.Landing" parent="Theme.WarrantyRoster">
         <item name="android:colorBackground">@color/blue</item>
+        <item name="android:statusBarColor">@color/blue</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
     </style>
 
