--- a/app/src/main/res/layout/fragment_warranties.xml
+++ b/app/src/main/res/layout/fragment_warranties.xml
@@ -9,8 +9,8 @@
         style="@style/Theme.WarrantyRoster.Toolbar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        app:contentInsetEnd="8dp"
-        app:contentInsetStart="8dp"
+        app:contentInsetEnd="12dp"
+        app:contentInsetStart="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,7 +20,7 @@
             android:id="@+id/search_warranties"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
+            android:layout_gravity="center_vertical|end"
             android:maxWidth="1000dp"
             app:closeIcon="@drawable/ic_menu_close"
             app:queryHint="@string/warranties_menu_hint_search"
