--- a/app/src/main/res/layout/list_warranty.xml
+++ b/app/src/main/res/layout/list_warranty.xml
@@ -26,7 +26,7 @@
             android:layout_marginBottom="12dp"
             android:background="@color/grayLight"
             android:src="@drawable/ic_category_accessories"
-            app:contentPadding="8dp"
+            app:contentPadding="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,14 +39,14 @@
             android:layout_marginHorizontal="12dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_bold"
-            android:gravity="center_vertical"
+            android:gravity="center_vertical|start"
             android:maxLines="1"
             android:text="Samsung TV"
             android:textAlignment="gravity"
             android:textColor="@color/navyBlue"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/tv_list_warranty_expiry_title"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tv_list_warranty_expiry_date"
+            app:layout_constraintEnd_toStartOf="@id/tv_list_warranty_status"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/iv_list_warranty_icon"
             app:layout_constraintTop_toTopOf="parent"
@@ -54,40 +54,72 @@
             tools:ignore="HardcodedText" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_list_warranty_expiry_title"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_list_warranty_expiry_date"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="12dp"
             android:fontFamily="@font/nunito_regular"
-            android:gravity="center_vertical"
+            android:gravity="center_vertical|start"
             android:maxLines="1"
-            android:text="@string/warranties_list_expiry_title"
+            android:text="January 2nd, 2022"
             android:textAlignment="gravity"
             android:textColor="@color/grayDark"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tv_list_warranty_category"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/iv_list_warranty_icon"
-            app:layout_constraintTop_toBottomOf="@+id/tv_list_warranty_title" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_list_warranty_title"
+            tools:ignore="HardcodedText" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_list_warranty_expiry_date"
-            android:layout_width="0dp"
+            android:id="@+id/tv_list_warranty_status"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="8dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/nunito_semi_bold"
-            android:gravity="center_vertical"
+            android:layout_marginEnd="2dp"
+            android:fontFamily="@font/nunito_black"
+            android:gravity="center"
             android:maxLines="1"
-            android:text="January 2nd, 2022"
+            android:text="@string/warranties_list_status_expired"
             android:textAlignment="gravity"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_list_warranty_expiry_title"
+            android:textAllCaps="true"
+            android:textColor="@color/red"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_list_warranty_category"
+            app:layout_constraintEnd_toStartOf="@+id/fl_list_warranty_status"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:ignore="SmallSp" />
+
+        <FrameLayout
+            android:id="@+id/fl_list_warranty_status"
+            android:layout_width="4dp"
+            android:layout_height="4dp"
+            android:layout_marginEnd="12dp"
+            android:background="@drawable/shape_circle"
+            android:backgroundTint="@color/red"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_list_warranty_status"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_list_warranty_expiry_title"
-            tools:ignore="HardcodedText" />
+            app:layout_constraintTop_toTopOf="@+id/tv_list_warranty_status" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_list_warranty_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:fontFamily="@font/nunito_extra_light"
+            android:gravity="center_vertical|end"
+            android:maxLines="1"
+            android:text="@string/warranties_list_status_expired"
+            android:textAlignment="gravity"
+            android:textColor="@color/grayDark"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_list_warranty_status"
+            tools:ignore="SmallSp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
