--- a/app/src/main/res/layout/activity_add_warranty.xml
+++ b/app/src/main/res/layout/activity_add_warranty.xml
@@ -59,6 +59,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center_vertical|start"
+                        android:labelFor="@+id/ti_add_warranty_layout_title"
                         android:maxLines="1"
                         android:text="@string/add_warranty_title_title"
                         android:textAlignment="gravity"
@@ -103,6 +104,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center_vertical|start"
+                        android:labelFor="@+id/ti_add_warranty_layout_category"
                         android:maxLines="1"
                         android:text="@string/add_warranty_title_category"
                         android:textAlignment="gravity"
@@ -183,6 +185,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center_vertical|start"
+                        android:labelFor="@+id/ti_add_warranty_layout_brand"
                         android:maxLines="1"
                         android:text="@string/add_warranty_title_brand"
                         android:textAlignment="gravity"
@@ -227,6 +230,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center_vertical|start"
+                        android:labelFor="@+id/ti_add_warranty_layout_model"
                         android:maxLines="1"
                         android:text="@string/add_warranty_title_model"
                         android:textAlignment="gravity"
@@ -271,6 +275,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center_vertical|start"
+                        android:labelFor="@+id/ti_add_warranty_layout_serial"
                         android:maxLines="1"
                         android:text="@string/add_warranty_title_serial"
                         android:textAlignment="gravity"
@@ -338,6 +343,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center_vertical|start"
+                        android:labelFor="@+id/ti_add_warranty_layout_date_starting"
                         android:maxLines="1"
                         android:text="@string/add_warranty_title_date_starting"
                         android:textAlignment="gravity"
@@ -385,6 +391,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center_vertical|start"
+                        android:labelFor="@+id/ti_add_warranty_layout_date_expiry"
                         android:maxLines="1"
                         android:text="@string/add_warranty_title_date_expiry"
                         android:textAlignment="gravity"
@@ -432,6 +439,7 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/nunito_bold"
                         android:gravity="center_vertical|start"
+                        android:labelFor="@+id/ti_add_warranty_layout_description"
                         android:maxLines="1"
                         android:text="@string/add_warranty_title_description"
                         android:textAlignment="gravity"
