--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -37,6 +37,7 @@
             android:layout_marginTop="76dp"
             android:fontFamily="@font/nunito_bold"
             android:gravity="start|center_vertical"
+            android:labelFor="@+id/ti_register_layout_email"
             android:maxLines="1"
             android:text="@string/register_title_email"
             android:textAlignment="gravity"
@@ -82,6 +83,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/nunito_bold"
             android:gravity="start|center_vertical"
+            android:labelFor="@+id/ti_register_layout_password"
             android:maxLines="1"
             android:text="@string/register_title_password"
             android:textAlignment="gravity"
@@ -128,6 +130,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/nunito_bold"
             android:gravity="start|center_vertical"
+            android:labelFor="@+id/ti_register_layout_retype_password"
             android:maxLines="1"
             android:text="@string/register_title_retype_password"
             android:textAlignment="gravity"
