--- a/app/src/main/res/layout/list_warranty.xml
+++ b/app/src/main/res/layout/list_warranty.xml
@@ -41,12 +41,12 @@
             android:fontFamily="@font/nunito_bold"
             android:gravity="center_vertical|start"
             android:maxLines="1"
-            android:text="Samsung TV"
+            android:text="Dining Room TV"
             android:textAlignment="gravity"
             android:textColor="@color/navyBlue"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_list_warranty_expiry_date"
-            app:layout_constraintEnd_toStartOf="@id/tv_list_warranty_status"
+            app:layout_constraintEnd_toStartOf="@id/barrier_list_warranty"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/iv_list_warranty_icon"
             app:layout_constraintTop_toTopOf="parent"
@@ -67,7 +67,7 @@
             android:textColor="@color/grayDark"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_list_warranty_category"
+            app:layout_constraintEnd_toStartOf="@+id/barrier_list_warranty"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/iv_list_warranty_icon"
             app:layout_constraintTop_toBottomOf="@+id/tv_list_warranty_title"
@@ -112,14 +112,21 @@
             android:fontFamily="@font/nunito_extra_light"
             android:gravity="center_vertical|end"
             android:maxLines="1"
-            android:text="@string/warranties_list_status_expired"
+            android:text="Musical Instrument"
             android:textAlignment="gravity"
             android:textColor="@color/grayDark"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_list_warranty_status"
-            tools:ignore="SmallSp" />
+            tools:ignore="HardcodedText,SmallSp" />
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier_list_warranty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="start"
+            app:constraint_referenced_ids="tv_list_warranty_status,tv_list_warranty_category" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
