--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -186,7 +186,7 @@
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/cpi_register"
-            style="@style/Theme.WarrantyRoster.LoadingProgressBar"
+            style="@style/Theme.WarrantyRoster.LoadingProgressBar.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
