Connect Add Warranty Fragment to the API

--- a/app/src/main/res/layout/fragment_add_warranty.xml
+++ b/app/src/main/res/layout/fragment_add_warranty.xml
@@ -430,6 +430,23 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/tv_add_warranty_date_error"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="24dp"
+                        android:layout_marginTop="4dp"
+                        android:fontFamily="@font/nunito_semi_bold"
+                        android:gravity="center_vertical|start"
+                        android:text="@string/add_warranty_error_date"
+                        android:textAlignment="gravity"
+                        android:textColor="@color/red"
+                        android:textSize="12sp"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/ti_add_warranty_layout_date_starting" />
+
+                    <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/tv_add_warranty_title_description"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -445,7 +462,7 @@
                         android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/ti_add_warranty_layout_date_starting" />
+                        app:layout_constraintTop_toBottomOf="@+id/tv_add_warranty_date_error" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/ti_add_warranty_layout_description"
@@ -482,5 +499,17 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/cpi_add_warranty"
+        style="@style/Theme.WarrantyRoster.LoadingProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:indicatorColor="@color/blue"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_add_warranty" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
