--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -9,7 +9,15 @@
         android:id="@+id/warrantiesFragment"
         android:name="com.xeniac.warrantyroster.mainactivity.warrantiesfragment.WarrantiesFragment"
         android:label="WarrantiesFragment"
-        tools:layout="@layout/fragment_warranties" />
+        tools:layout="@layout/fragment_warranties">
+        <action
+            android:id="@+id/action_warrantiesFragment_to_warrantyDetailsFragment"
+            app:destination="@id/warrantyDetailsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
 
     <fragment
         android:id="@+id/moreFragment"
@@ -40,5 +48,20 @@
         app:exitAnim="@anim/nav_default_exit_anim"
         app:popEnterAnim="@anim/nav_default_pop_enter_anim"
         app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+    <fragment
+        android:id="@+id/warrantyDetailsFragment"
+        android:name="com.xeniac.warrantyroster.mainactivity.warrantydetailsfragment.WarrantyDetailsFragment"
+        android:label="WarrantyDetailsFragment"
+        tools:layout="@layout/fragment_warranty_details">
+        <argument
+            android:name="warranty"
+            app:argType="com.xeniac.warrantyroster.mainactivity.warrantiesfragment.WarrantyDataModel"
+            app:nullable="false" />
+        <argument
+            android:name="daysUntilExpiry"
+            app:argType="long"
+            app:nullable="false" />
+    </fragment>
 
 </navigation>
