--- a/app/src/main/res/menu/menu_edit_warranty.xml
+++ b/app/src/main/res/menu/menu_edit_warranty.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_menu_add"
+        android:id="@+id/action_menu_edit"
         android:icon="@drawable/ic_menu_tick"
-        android:title="@string/add_warranty_menu_title_add"
+        android:title="@string/edit_warranty_menu_title_edit"
         app:showAsAction="always" />
 
 </menu>
