--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,10 +4,10 @@
         <item name="android:colorBackground">@color/background</item>
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryVariant">@color/navyBlue</item>
-        <item name="colorOnPrimary">@android:color/white</item>
+        <item name="colorOnPrimary">@color/whiteConstant</item>
         <item name="colorSecondary">@color/blue</item>
         <item name="colorSecondaryVariant">@color/navyBlue</item>
-        <item name="colorOnSecondary">@android:color/white</item>
+        <item name="colorOnSecondary">@color/whiteConstant</item>
         <item name="android:statusBarColor">@color/surface</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <item name="snackbarStyle">@style/Theme.WarrantyRoster.Snackbar</item>
@@ -87,7 +87,7 @@
     <style name="Theme.WarrantyRoster.LoadingProgressBar.Button" parent="Widget.MaterialComponents.CircularProgressIndicator.Small">
         <item name="android:indeterminate">true</item>
         <item name="hideAnimationBehavior">inward</item>
-        <item name="indicatorColor">@android:color/white</item>
+        <item name="indicatorColor">@color/whiteConstant</item>
         <item name="showAnimationBehavior">outward</item>
         <item name="trackCornerRadius">12dp</item>
     </style>
@@ -102,6 +102,7 @@
 
     <style name="Theme.WarrantyRoster.Button" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.Button.Appearance</item>
+        <item name="android:textColor">@color/whiteConstant</item>
         <item name="textAllCaps">false</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
@@ -115,6 +116,7 @@
 
     <style name="Theme.WarrantyRoster.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
+        <item name="android:textColor">@color/blue</item>
         <item name="textAllCaps">false</item>
         <item name="android:ellipsize">end</item>
         <item name="android:insetLeft">0dp</item>
