--- a/app/src/main/res/layout/fragment_forgot_pw_sent.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw_sent.xml
@@ -86,7 +86,6 @@
             android:textAlignment="gravity"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lav_forgot_pw_sent" />
@@ -103,7 +102,6 @@
             android:textAlignment="gravity"
             android:textColor="@color/green"
             android:textSize="14sp"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pw_sent_resent"
@@ -121,13 +119,26 @@
             android:gravity="center"
             android:text="@string/forgot_pw_btn_return"
             android:textAlignment="gravity"
-            android:textColor="@color/blue"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_forgot_pw_sent_resend"
             app:layout_goneMarginTop="79dp" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group_forgot_pw_sent_resend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:constraint_referenced_ids="tv_forgot_pw_sent_resend,btn_forgot_pw_sent_resend" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group_forgot_pw_sent_timer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="tv_forgot_pw_sent_resent,tv_forgot_pw_sent_timer" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
