--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -38,4 +38,24 @@
         app:layout_constraintTop_toBottomOf="@+id/lav_more_construction"
         tools:ignore="HardcodedText" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_more_logout"
+        style="@style/Theme.WarrantyRoster.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="4dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginBottom="83dp"
+        android:fontFamily="@font/nunito_bold"
+        android:gravity="center"
+        android:text="Logout"
+        android:textAlignment="gravity"
+        android:textColor="@color/red"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_more_construction"
+        tools:ignore="HardcodedText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
