--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,11 +9,15 @@
     <color name="green">#00BD62</color>
     <color name="red">#FF3442</color>
     <color name="orange">#FF9100</color>
-    <color name="green20">#3300BD62</color>
-    <color name="red20">#33FF3442</color>
-    <color name="orange20">#33FF9100</color>
     <color name="grayLight">#1F1F1F</color>
     <color name="grayMedium">#2E2E2E</color>
     <color name="grayDark">#808080</color>
     <color name="whiteConstant">#FFFFFF</color>
+    <color name="navyBlue10">#1ADEF4FD</color>
+    <color name="green10">#1A00BD62</color>
+    <color name="green20">#3300BD62</color>
+    <color name="red10">#1AFF3442</color>
+    <color name="blue20">#331C53F4</color>
+    <color name="red20">#33FF3442</color>
+    <color name="orange20">#33FF9100</color>
 </resources>
