--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -109,6 +109,16 @@
         <item name="android:padding">16dp</item>
     </style>
 
+    <style name="Theme.WarrantyRoster.Button.Settings" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="shapeAppearance">@style/Theme.WarrantyRoster.Button.Appearance</item>
+        <item name="backgroundTint">@color/red10</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:padding">16dp</item>
+    </style>
+
     <style name="Theme.WarrantyRoster.Button.Appearance">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">12dp</item>
@@ -127,6 +137,26 @@
         <item name="android:minWidth">0dp</item>
         <item name="android:minHeight">0dp</item>
         <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.TextButton.Settings" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
+        <item name="android:textColor">@color/blue</item>
+        <item name="backgroundTint">@color/blue20</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:paddingEnd">8dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.TextButton.Appearance">
@@ -155,6 +185,11 @@
     <style name="Theme.WarrantyRoster.ImageViewShapeAppearance">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">12dp</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.ImageViewShapeAppearance.Settings">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
     </style>
 
 </resources>
